Fixed gui issue